Add mat-card demo and customized theme

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -32,6 +32,7 @@
       <a mat-list-item matLine [routerLink]="['badge']">Badge</a>
       <a mat-list-item matLine [routerLink]="['button']">Button</a>
       <a mat-list-item matLine [routerLink]="['button-toggle']">Button toggle</a>
+      <a mat-list-item matLine [routerLink]="['card']">Card</a>
       <a mat-list-item matLine [routerLink]="['checkbox']">Checkbox</a>
       <a mat-list-item matLine [routerLink]="['chip']">Chip</a>
       <a mat-list-item matLine [routerLink]="['form-field']">Form field</a>
