Add doc's links

--- a/src/app/button-toggle/button-toggle.component.html
+++ b/src/app/button-toggle/button-toggle.component.html
@@ -1,4 +1,9 @@
-<h1 class="mat-display-1">Button toggle</h1>
+<h2 class="title">Button Toggle</h2>
+
+<div>
+  See Angular's Material's <a color="primary" href="https://material.angular.io/components/button-toggle/overview" target="_blank">Button toggle component</a>.
+</div>
+
 
 <section>
 
