--- a/src/app/button/button.component.html
+++ b/src/app/button/button.component.html
@@ -1,4 +1,8 @@
-<h1 class="mat-display-1">Button</h1>
+<h2 class="title">Button</h2>
+
+<div>
+  See Angular's Material's <a color="primary" href="https://material.angular.io/components/button/overview" target="_blank">Button component</a>.
+</div>
 
 <section>
 
