--- a/src/app/checkbox/checkbox.component.html
+++ b/src/app/checkbox/checkbox.component.html
@@ -1,4 +1,9 @@
-<h1 class="mat-display-1">Checkbox</h1>
+<h2 class="title">Checkbox</h2>
+
+<div>
+  See Angular's Material's <a color="primary" href="https://material.angular.io/components/checkbox/overview"
+                              target="_blank">Checkbox component</a>.
+</div>
 
 <section>
 
