--- a/src/app/chip/chip.component.html
+++ b/src/app/chip/chip.component.html
@@ -1,4 +1,10 @@
-<h1 class="mat-display-1">Chip</h1>
+<h2 class="title">Chip</h2>
+
+<div>
+  See Angular's Material's <a color="primary" href="https://material.angular.io/components/chips/overview"
+                              target="_blank">Chip component</a>.
+</div>
+
 
 <section>
 
