--- a/src/app/list/list.component.html
+++ b/src/app/list/list.component.html
@@ -1,4 +1,9 @@
-<h1 class="mat-display-1">List</h1>
+<h2 class="title">List</h2>
+
+<div>
+  See Angular's Material's <a color="primary" href="https://material.angular.io/components/list/overview"
+                              target="_blank">List component</a>.
+</div>
 
 <section>
 
