--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,4 +1,9 @@
-<h1 class="mat-display-1">Menu</h1>
+<h2 class="title">Menu</h2>
+
+<div>
+  See Angular's Material's <a color="primary" href="https://material.angular.io/components/menu/overview"
+                              target="_blank">Menu component</a>.
+</div>
 
 <section>
 
