--- a/src/app/progress-bar/progress-bar.component.html
+++ b/src/app/progress-bar/progress-bar.component.html
@@ -1,4 +1,9 @@
-<h1 class="mat-display-1">Progress bar</h1>
+<h2 class="title">Progress bar</h2>
+
+<div>
+  See Angular's Material's <a color="primary" href="https://material.angular.io/components/progress-bar/overview"
+                              target="_blank">Progress bar component</a>.
+</div>
 
 <section>
 
