--- a/src/app/radio-button/radio-button.component.html
+++ b/src/app/radio-button/radio-button.component.html
@@ -1,4 +1,9 @@
-<h1 class="mat-display-1">Radio button</h1>
+<h2 class="title">Radio button</h2>
+
+<div>
+  See Angular's Material's <a color="primary" href="https://material.angular.io/components/radio/overview"
+                              target="_blank">Radio button component</a>.
+</div>
 
 <section>
 
