--- a/src/app/slider/slider.component.html
+++ b/src/app/slider/slider.component.html
@@ -1,4 +1,9 @@
-<h1 class="mat-display-1">Slider</h1>
+<h2 class="title">Slider</h2>
+
+<div>
+  See Angular's Material's <a color="primary" href="https://material.angular.io/components/slider/overview"
+                              target="_blank">Slider component</a>.
+</div>
 
 <section>
 
