--- a/src/app/table/table.component.html
+++ b/src/app/table/table.component.html
@@ -1,4 +1,10 @@
-<h1 class="mat-display-1">Table</h1>
+<h2 class="title">Table</h2>
+
+<div>
+  See Angular's Material's <a color="primary" href="https://material.angular.io/components/table/overview"
+                              target="_blank">Table component</a>.
+</div>
+
 
 <section>
 
