--- a/src/app/tabs/tabs.component.html
+++ b/src/app/tabs/tabs.component.html
@@ -1,4 +1,10 @@
-<h1 class="mat-display-1">Tabs</h1>
+<h2 class="title">Tabs</h2>
+
+<div>
+  See Angular's Material's <a color="primary" href="https://material.angular.io/components/tabs/overview"
+                              target="_blank">Tabs component</a>.
+</div>
+
 
 <section>
 
