--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -1,4 +1,10 @@
-<h1 class="mat-display-1">Toolbar</h1>
+<h2 class="title">Toolbar</h2>
+
+<div>
+  See Angular's Material's <a color="primary" href="https://material.angular.io/components/toolbar/overview"
+                              target="_blank">Toolbar component</a>.
+</div>
+
 
 <section>
 
