--- a/src/app/typography/typography.component.html
+++ b/src/app/typography/typography.component.html
@@ -1,3 +1,8 @@
+<h2 class="title">Typography</h2>
+
+<div>
+  See Angular's Material's <a color="primary" href="https://material.angular.io/guide/typography" target="_blank">Typography</a> documentation.
+</div>
 
 <div class="mat-display-4">Display 4</div>
 <div class="mat-display-3">Display 3</div>
