--- a/src/app/badge/badge.component.html
+++ b/src/app/badge/badge.component.html
@@ -1,4 +1,8 @@
-<h1 class="mat-display-1">Badge</h1>
+<h2 class="title">Badge</h2>
+
+<div>
+  See Angular's Material's <a color="primary" href="https://material.angular.io/components/badge/overview" target="_blank">Badge component</a>.
+</div>
 
 <section>
   <mat-card>
