--- a/src/app/form-field/form-field.component.html
+++ b/src/app/form-field/form-field.component.html
@@ -1,4 +1,9 @@
-<h1 class="mat-display-1">Form field</h1>
+<h2 class="title">Form field</h2>
+
+<div>
+  See Angular's Material's <a color="primary" href="https://material.angular.io/components/form-field/overview"
+                              target="_blank">Form field component</a>.
+</div>
 
 <section [formGroup]="form">
 
