--- a/src/app/progress-spinner/progress-spinner.component.html
+++ b/src/app/progress-spinner/progress-spinner.component.html
@@ -1,4 +1,9 @@
-<h1 class="mat-display-1">Progress spinner</h1>
+<h2 class="title">Progress spinner</h2>
+
+<div>
+  See Angular's Material's <a color="primary" href="https://material.angular.io/components/progress-spinner/overview"
+                              target="_blank">Progress spinner component</a>.
+</div>
 
 <section>
 
