--- a/src/app/slide-toggle/slide-toggle.component.html
+++ b/src/app/slide-toggle/slide-toggle.component.html
@@ -1,4 +1,9 @@
-<h1 class="mat-display-1">Slide toggle</h1>
+<h2 class="title">Slide toggle</h2>
+
+<div>
+  See Angular's Material's <a color="primary" href="https://material.angular.io/components/slide-toggle/overview"
+                              target="_blank">Slide toggle component</a>.
+</div>
 
 <section>
 
