--- a/src/app/snackbar/snackbar.component.html
+++ b/src/app/snackbar/snackbar.component.html
@@ -1,4 +1,9 @@
-<h1 class="mat-display-1">Snackbar</h1>
+<h2 class="title">Snackbar</h2>
+
+<div>
+  See Angular's Material's <a color="primary" href="https://material.angular.io/components/snack-bar/overview"
+                              target="_blank">Snackbar component</a>.
+</div>
 
 <section>
 
