--- a/src/app/tooltip/tooltip.component.html
+++ b/src/app/tooltip/tooltip.component.html
@@ -1,4 +1,9 @@
-<h1 class="mat-display-1">Tooltip</h1>
+<h2 class="title">Tooltip</h2>
+
+<div>
+  See Angular's Material's <a color="primary" href="https://material.angular.io/components/tooltip/overview"
+                              target="_blank">Tooltip component</a>.
+</div>
 
 <section>
 
