--- a/src/app/card/card.component.html
+++ b/src/app/card/card.component.html
@@ -10,7 +10,6 @@
   <div>
     <mat-card>
       <mat-card-title>Title</mat-card-title>
-      <mat-card-subtitle>Subtitle</mat-card-subtitle>
       <mat-card-content>
         Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium,
         totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt
@@ -29,8 +28,28 @@
 
   <div>
     <mat-card>
-      <mat-card-title>Title inside Header</mat-card-title>
-      <mat-card-subtitle>Subtitle inside Header</mat-card-subtitle>
+      <mat-card-title>Title</mat-card-title>
+      <mat-divider></mat-divider>
+      <mat-card-content>
+        Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium,
+        totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt
+        explicabo.
+        Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores
+        eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet,
+        consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam
+        quaerat voluptatem.
+      </mat-card-content>
+      <mat-card-actions>
+        <button mat-flat-button color="success">OK</button>
+        <button mat-flat-button>Cancel</button>
+      </mat-card-actions>
+    </mat-card>
+  </div>
+
+  <div>
+    <mat-card>
+      <mat-card-title>Title </mat-card-title>
+      <mat-card-subtitle>Subtitle</mat-card-subtitle>
       <mat-divider></mat-divider>
       <mat-card-content>
         Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium,
@@ -75,8 +94,10 @@
 
   <div>
     <mat-card>
-      <mat-card-title>Card with Image</mat-card-title>
-      <mat-card-subtitle>Subtitle</mat-card-subtitle>
+      <mat-card-header>
+        <mat-card-title>Card with Image</mat-card-title>
+        <mat-card-subtitle>Subtitle</mat-card-subtitle>
+      </mat-card-header>
       <img mat-card-image src="/assets/image-lg.jpg">
       <mat-card-content>
         Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium,
