--- a/src/themes/arc/arc-dark.theme.scss
+++ b/src/themes/arc/arc-dark.theme.scss
@@ -104,10 +104,10 @@ $theme: (
 
   background-color: $dark-background;
 
-  a:not(.mat-button),
-  a:not(.mat-button):hover,
-  a:not(.mat-button):active,
-  a:not(.mat-button):visited {
+  a:not(.mat-button, .mat-list-item),
+  a:not(.mat-button, .mat-list-item):hover,
+  a:not(.mat-button, .mat-list-item):active,
+  a:not(.mat-button, .mat-list-item):visited {
     color: map.get($theme-primary, default);
   }
 
