--- a/src/themes/_material/_mat-card.scss
+++ b/src/themes/_material/_mat-card.scss
@@ -7,12 +7,19 @@
   $config: theming.get-color-config($theme);
   $is-dark-theme: map.get($config, is-dark);
 
-  .mat-card:not([class*=mat-elevation-z]) {
-    @if $is-dark-theme {
-      box-shadow: 0 2px 14px rgba(0 0 0 / 16%);
+  $foreground: map.get($config, foreground);
+
+  .mat-card {
+
+    &:not([class*=mat-elevation-z]) {
+      box-shadow: none;
     }
-    @else {
-      box-shadow: 0 2px 14px rgb(0 0 0 / 8%);
+
+    .mat-card-header,
+    .mat-card-title {
+      .mat-icon {
+        color: map.get($foreground, secondary-text);
+      }
     }
   }
 
@@ -38,6 +45,13 @@
 
   .mat-card-title {
     margin-bottom: 16px;
+    .mat-icon {
+      vertical-align: middle;
+      line-height: 20px;
+      &:first-child {
+        margin-right: 8px;
+      }
+    }
   }
 
   .mat-card-title + .mat-card-subtitle {
@@ -56,7 +70,9 @@
     margin-top: 16px;
   }
 
-
+  .mat-icon.mat-card-avatar {
+    font-size: 40px;
+  }
 
   .mat-card-actions {
     margin-left: 0;
