Add icon styles

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -36,6 +36,7 @@
       <a mat-list-item matLine [routerLink]="['checkbox']">Checkbox</a>
       <a mat-list-item matLine [routerLink]="['chip']">Chip</a>
       <a mat-list-item matLine [routerLink]="['form-field']">Form field</a>
+      <a mat-list-item matLine [routerLink]="['icon']">Icon</a>
       <a mat-list-item matLine [routerLink]="['list']">List</a>
       <a mat-list-item matLine [routerLink]="['menu']">Menu</a>
       <a mat-list-item matLine [routerLink]="['progress-bar']">Progress bar</a>
