--- a/src/app/card/card.component.html
+++ b/src/app/card/card.component.html
@@ -70,12 +70,55 @@
 
   <div>
     <mat-card>
+      <mat-card-title><mat-icon>info</mat-icon> Card with title icon</mat-card-title>
+      <mat-divider></mat-divider>
+      <mat-card-content>
+        Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium,
+        totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt
+        explicabo.
+        Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores
+        eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet,
+        consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam
+        quaerat voluptatem.
+      </mat-card-content>
+      <mat-card-actions>
+        <button mat-flat-button color="success">OK</button>
+        <button mat-flat-button>Cancel</button>
+      </mat-card-actions>
+    </mat-card>
+  </div>
+
+  <div>
+    <mat-card>
       <mat-card-header>
         <img mat-card-avatar src="/assets/image-sm.jpg">
         <mat-card-title>Card with Avatar</mat-card-title>
         <mat-card-subtitle>Subtitle</mat-card-subtitle>
       </mat-card-header>
       <mat-divider></mat-divider>
+      <mat-card-content>
+        Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium,
+        totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt
+        explicabo.
+        Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores
+        eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet,
+        consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam
+        quaerat voluptatem.
+      </mat-card-content>
+      <mat-card-actions>
+        <button mat-flat-button color="success">OK</button>
+        <button mat-flat-button>Cancel</button>
+      </mat-card-actions>
+    </mat-card>
+  </div>
+
+  <div>
+    <mat-card>
+      <mat-card-header>
+        <mat-icon mat-card-avatar>account_circle</mat-icon>
+        <mat-card-title>Card with Icon</mat-card-title>
+        <mat-card-subtitle>Subtitle</mat-card-subtitle>
+      </mat-card-header>
       <mat-card-content>
         Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium,
         totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt
