--- a/src/themes/_material/_mat-card.scss
+++ b/src/themes/_material/_mat-card.scss
@@ -17,7 +17,7 @@
 
     .mat-card-header,
     .mat-card-title {
-      .mat-icon {
+      &.mat-icon {
         color: map.get($foreground, secondary-text);
       }
     }
@@ -49,7 +49,7 @@
       vertical-align: middle;
       line-height: 20px;
       &:first-child {
-        margin-right: 8px;
+        margin-right: 4px;
       }
     }
   }
