--- a/src/themes/arc/arc-dark.theme.scss
+++ b/src/themes/arc/arc-dark.theme.scss
@@ -94,7 +94,7 @@ $theme: (
 @include theming.core($theme-typography);
 
 :root {
-  @include mixins.export_theme_colors($theme);
+  @include mixins.export_theme_colors_vars($theme);
 }
 
 .arc-dark-theme {
