--- a/src/themes/arc/arc-light.theme.scss
+++ b/src/themes/arc/arc-light.theme.scss
@@ -98,7 +98,7 @@ $theme: (
 @include theming.core($theme-typography);
 
 :root {
-  @include mixins.export_theme_colors($theme);
+  @include mixins.export_theme_colors_vars($theme);
 }
 
 .arc-light-theme {
