--- a/src/themes/transparent/transparent-light.theme.scss
+++ b/src/themes/transparent/transparent-light.theme.scss
@@ -129,7 +129,7 @@ $theme: (
 @include theming.core($theme-typography);
 
 :root {
-  @include mixins.export_theme_colors($theme);
+  @include mixins.export_theme_colors_vars($theme);
 }
 
 .transparent-light-theme {
