--- a/src/app/icon/icon.component.html
+++ b/src/app/icon/icon.component.html
@@ -22,5 +22,16 @@
     </mat-card-content>
   </mat-card>
 
+  <mat-card>
+    <mat-card-title>Dense Icons</mat-card-title>
+    <mat-card-content>
+
+      <div>
+        <mat-icon *ngFor="let c of allColors" [color]="c" dense>verified</mat-icon>
+      </div>
+
+    </mat-card-content>
+  </mat-card>
+
 
 </section>
