Add Dialog styles and demo

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -35,6 +35,7 @@
       <a mat-list-item matLine [routerLink]="['card']">Card</a>
       <a mat-list-item matLine [routerLink]="['checkbox']">Checkbox</a>
       <a mat-list-item matLine [routerLink]="['chip']">Chip</a>
+      <a mat-list-item matLine [routerLink]="['dialog']">Dialog</a>
       <a mat-list-item matLine [routerLink]="['form-field']">Form field</a>
       <a mat-list-item matLine [routerLink]="['icon']">Icon</a>
       <a mat-list-item matLine [routerLink]="['list']">List</a>
