--- a/src/app/card/card.component.html
+++ b/src/app/card/card.component.html
@@ -81,7 +81,7 @@
         consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam
         quaerat voluptatem.
       </mat-card-content>
-      <mat-card-actions>
+      <mat-card-actions align="end">
         <button mat-flat-button color="success">OK</button>
         <button mat-flat-button>Cancel</button>
       </mat-card-actions>
