Dialog title/header styles

--- a/src/app/dialog/dialog-example/dialog-example.component.html
+++ b/src/app/dialog/dialog-example/dialog-example.component.html
@@ -1,9 +1,9 @@
 
-<h2 mat-dialog-title>
+<div mat-dialog-title>
   <mat-icon>shopping_bag</mat-icon>
-  <span>Dialog title</span>
-  <button mat-dialog-close mat-icon-button color="warn"><mat-icon>cancel</mat-icon></button>
-</h2>
+  <h2>Dialog title</h2>
+  <button mat-dialog-close mat-icon-button color="warn"><mat-icon>close</mat-icon></button>
+</div>
 
 <div mat-dialog-content>
   Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium,
