--- a/src/themes/_material/_mat-dialog.scss
+++ b/src/themes/_material/_mat-dialog.scss
@@ -12,6 +12,10 @@
     > .mat-icon {
       color: map.get($foreground, secondary-text);
     }
+    h1, h2, h3, h4, h5, h6 {
+      margin: 0;
+      flex: 1;
+    }
   }
 
 }
