Fix icon button line height

--- a/src/themes/_material/_mat-button.scss
+++ b/src/themes/_material/_mat-button.scss
@@ -106,6 +106,7 @@
 
   .mat-icon-button {
     &[dense] {
+      line-height: $dense-icon-size;
       width: $dense-size;
       height: $dense-size;
     }
