--- a/src/app/slide-toggle/slide-toggle.component.html
+++ b/src/app/slide-toggle/slide-toggle.component.html
@@ -8,12 +8,41 @@
 <section>
 
   <mat-card>
+    <mat-card-title>Slide toggle label position</mat-card-title>
+    <mat-card-content>
+
+      <mat-slide-toggle
+        checked
+        color="primary">After</mat-slide-toggle>
+
+      <mat-slide-toggle
+        checked
+        labelPosition="before"
+        color="primary">Before</mat-slide-toggle>
+
+    </mat-card-content>
+  </mat-card>
+
+  <mat-card>
     <mat-card-title>Slide toggle colors</mat-card-title>
     <mat-card-content>
 
       <mat-slide-toggle
         *ngFor="let c of allColors"
         checked
+        [color]="c">Slide {{ c | titlecase }}</mat-slide-toggle>
+
+    </mat-card-content>
+  </mat-card>
+
+  <mat-card>
+    <mat-card-title>Inner slide toggle colors</mat-card-title>
+    <mat-card-content>
+
+      <mat-slide-toggle
+        *ngFor="let c of allColors"
+        checked
+        inner
         [color]="c">Slide {{ c | titlecase }}</mat-slide-toggle>
 
     </mat-card-content>
