--- a/src/app/slide-toggle/slide-toggle.component.scss
+++ b/src/app/slide-toggle/slide-toggle.component.scss
@@ -12,8 +12,8 @@
 
   .mat-card-content {
     display: flex;
-    flex-direction: column;
-    gap: 24px;
+    flex-wrap: wrap;
+    gap: 16px;
   }
 
 }
