Set mat-paginator default paddings

--- a/src/themes/_material/_mat-paginator.scss
+++ b/src/themes/_material/_mat-paginator.scss
@@ -10,7 +10,9 @@
   $config: theming.get-typography-config($theme);
 
   .mat-paginator {
-
+    .mat-paginator-container {
+      padding: 8px 8px;
+    }
   }
 
 }
