Set checkbox/radio/inner slide toggle components size to 24px x 24px

--- a/src/app/radio-button/radio-button.component.html
+++ b/src/app/radio-button/radio-button.component.html
@@ -31,7 +31,7 @@
         <mat-radio-button
           checked
           [color]="$any(c)"
-          [attr.color]="c">{{ c | titlecase }} checkbox</mat-radio-button>
+          [attr.color]="c">{{ c | titlecase }} radio</mat-radio-button>
       </mat-radio-group>
 
     </mat-card-content>
