--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -40,6 +40,7 @@
       <a mat-list-item matLine [routerLink]="['icon']">Icon</a>
       <a mat-list-item matLine [routerLink]="['list']">List</a>
       <a mat-list-item matLine [routerLink]="['menu']">Menu</a>
+      <a mat-list-item matLine [routerLink]="['paginator']">Paginator</a>
       <a mat-list-item matLine [routerLink]="['progress-bar']">Progress bar</a>
       <a mat-list-item matLine [routerLink]="['progress-spinner']">Progress spinner</a>
       <a mat-list-item matLine [routerLink]="['radio-button']">Radio button</a>
